<resources>
    <string name="title_create_account">Create Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="text_login_prompt">Already have an account? Log in</string>
    <string name="app_name">Recipe App</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="recipes">Recipes</string>
    <string name="cart">Cart</string>
    <string name="order_history">Order History</string>
    <string name="favorites">Favorites</string>
    <string name="total">Total</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="remove">Remove</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart_items">%d items</string>
    <string name="checkout">Checkout</string>
    <string name="order_review">Order Review</string>
    <string name="payment_method">Payment Method</string>
    <string name="place_order">Place Order</string>
    <string name="processing">Processing…</string>
    <string name="total_items">%d items</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax (8%%)</string>
    <string name="choose_an_option_below_to_get_started">Choose an option below to get started</string>
    <string name="welcome">Welcome!</string>
    <string name="_0">0</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item description</string>
    <string name="_0_00">$0.00</string>
    <string name="todo">TODO</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="you_are_signed_in_as_an_administrator">You are signed in as an administrator.</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="more_options">More options</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="recipe_image">Recipe image</string>
    <string name="title">Title</string>
    <string name="short_description">Short description</string>
    <string name="recipe_description" />
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="pick_image">Pick Image</string>
    <string name="save_changes">Save changes</string>
</resources>