<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etRecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/recipe_name"
        />

        <EditText
            android:id="@+id/etRecipeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/recipe_description"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/etRecipePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/etRecipeCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/category"
            android:layout_marginTop="8dp" />

        <ImageView
            android:id="@+id/ivRecipeImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            android:layout_marginTop="12dp"
            android:background="#DDDDDD" />

        <Button
            android:id="@+id/btnPickImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_image"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/btnSaveRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_recipe"
            android:layout_marginTop="16dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="12dp" />

    </LinearLayout>

</ScrollView>
